<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="TrackName">Undefined</string>
    <string name="playBtnText">⏵︎</string>
    <string name="pauseBtnText">⏸</string>
    <string name="nextBtnText">⏩︎︎︎</string>
    <string name="prevBtnText">⏪︎︎︎</string>
    <string name="cycleBtnText">︎︎︎🔁</string>
    <string name="cycleOneBtnText">🔂︎︎︎</string>
    <string name="shuffleBtnText">🔀︎︎︎</string>

    <string name="currentDurationText">0:00</string>
    <string name="fullDurationText">4:00</string>
    <string name="searchTxt">search</string>
    <string name="playListTxt">undefined</string>

    <string name="test_mp3">"https://storage.googleapis.com/exoplayer-test-media-0/play.mp3"</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="myTestMp4">"https://download.blender.org/demo/movies/BBB/bbb_sunflower_1080p_30fps_normal.mp4"</string>



</resources>