<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BcColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="867dp"
        android:background="@color/BcColor"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="46dp">

        <LinearLayout
            android:layout_width="407dp"
            android:layout_height="49dp"
            android:background="@drawable/rounded"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="20sp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5sp"
                android:layout_weight="15"
                android:text="@string/playListTxt"
                android:textAlignment="center"
                android:textColor="@color/BtnTxtColor"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="20sp"
                android:layout_height="match_parent"

                android:layout_weight="1" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="384dp"
            android:layout_marginHorizontal="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:mipmap/sym_def_app_icon"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TrackName"
            android:textAlignment="center"
            android:textColor="@color/TextColor" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@color/greenYellow"
            android:thumb="@android:drawable/presence_online" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginHorizontal="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/currentDurationText"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fullDurationText"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginHorizontal="10sp"
            android:paddingHorizontal="10sp">


            <Button
                android:id="@+id/shuffle"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginHorizontal="2sp"
                android:layout_weight="1"
                android:backgroundTint="@color/BtnBcColor"
                android:text="@string/shuffleBtnText"
                android:textColor="@color/greenYellow"
                android:textColorLink="@color/BtnBcColor" />

            <ImageView
                android:id="@+id/prev"
                android:layout_width="50sp"
                android:layout_height="match_parent"

                android:layout_marginHorizontal="2sp"
                android:layout_weight="1"
                android:scaleType="center"
                app:srcCompat="@drawable/prev" />


            <ImageView
                android:id="@+id/pause"
                android:layout_width="50sp"
                android:layout_height="match_parent"

                android:layout_marginHorizontal="2sp"
                android:layout_weight="1"
                android:scaleType="center"
                app:srcCompat="@drawable/pause" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="50sp"
                android:layout_height="match_parent"

                android:layout_marginHorizontal="2sp"
                android:layout_weight="1"
                android:scaleType="center"
                app:srcCompat="@drawable/next" />

            <Button
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginHorizontal="2sp"
                android:layout_weight="1"
                android:backgroundTint="@color/BtnBcColor"
                android:text="@string/cycleBtnText"
                android:textColor="@color/greenYellow"
                android:textColorLink="@color/BtnBcColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="10sp"
            android:background="@drawable/rounded"
            android:orientation="horizontal"
            android:paddingLeft="20sp"
            android:visibility="invisible"
            tools:visibility="invisible">


            <EditText
                android:id="@+id/searchEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:backgroundTint="@color/greenYellow"
                android:hint="@string/searchTxt"
                android:textColorHint="#ddd" />

            <ImageButton
                android:id="@+id/searchBtn"
                android:layout_width="50sp"
                android:layout_height="match_parent"

                android:layout_marginHorizontal="2sp"
                android:layout_weight="1"

                android:scaleType="center"
                app:srcCompat="@drawable/search" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>